syntax = "proto3";
package events;
option csharp_namespace = "Application.Protos.Events";

message ElementRemovedFromPageEvent {
	string element_id = 1;
}